[workspace]
members = ["louis_blog/app", "louis_blog/server", "louis_blog/front"]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.6", features = ["nightly", "experimental-islands"] }

leptos_actix = { version = "0.6", features = ["experimental-islands"] }
tokio = { version = "1" }
wasm-bindgen = "0.2"

[[workspace.metadata.leptos]]
name = "louis_blog"
bin-package = "server"
lib-package = "front"
assets-dir = "louis_blog/assets"
style-file = "louis_blog/css/main.scss"
site-root = "target/site/louis_blog"
lib-profile-release = "wasm-release"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = 'z'
