[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app", features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }
wasm-bindgen = { workspace = true }

[features]
